# go1_robot

./: README.md
go1_robot/go1_detection/: package.xml  setup.cfg  setup.py
go1_robot/go1_detection/go1_detection/: yolov8_number_detection_node.py
go1_robot/go1_detection/training/: README.md  generate_images.py
go1_robot/go1_detection/training/Detection/: data.yaml  detection.ipynb
go1_robot/go1_detection/training/Detection/dataset/train/: labels.cache
go1_robot/go1_detection/training/Detection/dataset/train/labels/: 0_0.txt  0_1.txt  0_2.txt  0_3.txt  0_4.txt  0_6.txt  0_7.txt  0_8.txt  0_9.txt  1_0.txt  1_1.txt  1_3.txt  1_4.txt  1_7.txt  1_8.txt  1_9.txt  2_0.txt  2_1.txt  2_2.txt  2_3.txt  2_4.txt  2_5.txt  2_6.txt  2_7.txt  2_8.txt  2_9.txt  3_0.txt  3_1.txt  3_2.txt  3_3.txt  3_4.txt  3_5.txt  3_6.txt  3_8.txt  3_9.txt  4_1.txt  4_3.txt  4_4.txt  4_5.txt  4_7.txt  (+11 more)
go1_robot/go1_detection/training/Detection/dataset/val/: labels.cache
go1_robot/go1_detection/training/Detection/dataset/val/labels/: 1_7.txt  1_8.txt  1_9.txt  3_4.txt  3_5.txt  3_6.txt  5_1.txt  5_2.txt  5_3.txt
go1_robot/go1_detection/training/Detection/runs/detect/train/: args.yaml  (+2 more)
go1_robot/go1_detection/training/labels/: 0_0.txt  0_1.txt  0_2.txt  0_3.txt  0_4.txt  0_5.txt  0_6.txt  0_7.txt  0_8.txt  0_9.txt  1_0.txt  1_1.txt  1_2.txt  1_3.txt  1_4.txt  1_5.txt  1_6.txt  1_7.txt  1_8.txt  1_9.txt  2_0.txt  2_1.txt  2_2.txt  2_3.txt  2_4.txt  2_5.txt  2_6.txt  2_7.txt  2_8.txt  2_9.txt  3_0.txt  3_1.txt  3_2.txt  3_4.txt  3_5.txt  3_6.txt  3_7.txt  3_8.txt  3_9.txt  4_0.txt  (+19 more)
(+3 files in other folders)
