<package format="3">
  <name>go1_detection</name>
  <version>0.0.0</version>
  <description>YOLOv8 detection node for Go1 robot</description>
  <maintainer email="saadaftab98d@gmail.com">saad</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ament_python</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


